# file_manager_emulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Readme.md  test_file.txt
include/: command_parser.h  command_type.h  file_manager_emulator.h  helpers.h  logger.h
src/: command_parser.cpp  file_manager_emulator.cpp  helpers.cpp  logger.cpp  main.cpp
